{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Gameplay",
            "id": "f8922484-88ad-4efd-bb07-56008f604aa8",
            "actions": [
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "a4eef443-ec47-4d63-9911-c84dfbaf65f2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "CastAttack",
                    "type": "Button",
                    "id": "eeb5c59f-f6dc-4e10-919c-7538e525bc47",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MeleeAttack",
                    "type": "Button",
                    "id": "d0e1ddc6-37cc-43b0-a4e5-2041a7b7165d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "56c14ea7-8c48-4f05-bde3-2cda47c4627b",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5cac3e96-76bb-4125-8e05-90cc2b56adca",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CastAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "94fb48e9-5a75-4903-b9b0-032d96f31f83",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MeleeAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}